--- a/style.css
+++ b/style.css
@@ -6,8 +6,15 @@
 }
 
 h1 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 80px;
     margin-top: 35px;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
+    color: #FFCB05;
+    -webkit-text-stroke: 4px #003A70;
+    text-stroke: 4px #003A70;
+    padding: 10px;
+    display: inline-block;/
 }
 
 body {
@@ -27,15 +34,41 @@ body {
     max-width: 1200px;
 
 }
-.pokemon{
+
+.pokemon {
     background-color: rgb(208, 208, 208);
     border-radius: 10px;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 1);
     margin: 10px;
     padding: 10px;
-    width: 320px;
+    width: 310px;
+    text-align: center;
 }
 
 .pokemon img {
-    width: 100%;
+    width: 95%;
+}
+
+.pokeImg {
+    background-color: rgb(186, 186, 186);
+    border-radius: 50%;
+    box-shadow: 0 1px 6px 0 rgb(0, 0, 0);
+}
+
+.sobre {
+    margin-top: 20px;
+}
+
+.number {
+    background-color: rgba(186, 186, 186, 1);
+    padding: 5px 9px;
+    border-radius: 10px;
+    font-weight: bold;
+}
+
+.name {
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
