--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 80px;
+    font-weight: bold;
     margin-top: 35px;
     margin-bottom: 50px;
     color: #FFCB05;
@@ -55,7 +56,7 @@ body {
     box-shadow: 0 1px 6px 0 rgb(0, 0, 0);
 }
 
-.sobre {
+.upon {
     margin-top: 20px;
 }
 
