--- a/style.css
+++ b/style.css
@@ -15,11 +15,18 @@ h1 {
     -webkit-text-stroke: 4px #003A70;
     text-stroke: 4px #003A70;
     padding: 10px;
-    display: inline-block;/
+    display: inline-block;
+    cursor: pointer;
+    transition: 0.3s;
+    
+}
+
+h1:hover {
+    transform: scale(1.04); /* Ajuste o valor conforme desejado */
 }
 
 body {
-    background: linear-gradient(to bottom, #f12711, #ececec);
+    background: linear-gradient(to bottom, #ebedf5, #ececec);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -33,8 +40,10 @@ body {
     justify-content: space-between;
     margin: 0 auto;
     max-width: 1200px;
-
+ 
 }
+
+
 
 .pokemon {
     background-color: rgb(208, 208, 208);
@@ -44,6 +53,14 @@ body {
     padding: 10px;
     width: 310px;
     text-align: center;
+    margin-bottom: 35px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.pokemon:hover {
+    transform: scale(1.04); /* Ajuste o valor conforme desejado */
+    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 1);
 }
 
 .pokemon img {
@@ -51,7 +68,7 @@ body {
 }
 
 .pokeImg {
-    background-color: rgb(186, 186, 186);
+    background-color: rgb(199, 199, 199);
     border-radius: 50%;
     box-shadow: 0 1px 6px 0 rgb(0, 0, 0);
 }
@@ -72,4 +89,22 @@ body {
     font-weight: bold;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+input[type="text"] {
+    padding: 10px;
+    margin-right: 10px;
+    border: 2px solid #c52424;
+    border-radius: 4px;
+    border-color: #000000;
+}
+
+button {
+    padding: 10px;
+    background-color: #003A70;
+    color: #FFCB05;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 50px;
 }
