--- a/style.css
+++ b/style.css
@@ -108,3 +108,10 @@ button {
     cursor: pointer;
     margin-bottom: 50px;
 }
+
+button:hover {
+    background-color: #123f63;
+    color: #FFCB05;
+    transform: scale(1.01); 
+
+}
