--- a/style.css
+++ b/style.css
@@ -115,3 +115,40 @@ button:hover {
     transform: scale(1.01); 
 
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #ffffff;
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+}
+
+.close {
+    position: absolute;
+    right: 10px;
+    font-size: 40px;
+    width: 40px;
+ 
+    cursor: pointer;
+}
+.close:hover {
+  
+    color: rgb(255, 0, 0);
+  
+}
+
+
+
+
