--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ button:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
@@ -134,6 +134,11 @@ button:hover {
     border-radius: 10px;
     position: relative;
 }
+
+.no-scroll {
+    overflow: hidden;
+}
+
 
 .close {
     position: absolute;
