--- a/style.css
+++ b/style.css
@@ -6,29 +6,31 @@
 }
 
 h1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', sans-serif;
     font-size: 80px;
     font-weight: bold;
     margin-top: 35px;
     margin-bottom: 50px;
-    color: #FFCB05;
-    -webkit-text-stroke: 4px #003A70;
-    text-stroke: 4px #003A70;
+    color: #fc3516;
+    -webkit-text-stroke: 4px #873e0d;
     padding: 10px;
     display: inline-block;
     cursor: pointer;
     transition: 0.3s;
 
+
 }
 
 h1:hover {
     transform: scale(1.04);
-    /* Ajuste o valor conforme desejado */
+
 }
 
 body {
-    background: linear-gradient(to right, #ebedf5, #ffffff);
+    background-color: #ffffff;
+    color: #000000;
     display: flex;
+    font-weight: bold;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -44,6 +46,19 @@ body {
 
 }
 
+@media only screen and (max-width: 768px) {
+    .pokeBox {
+        justify-content: center;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .pokeBox {
+        flex-direction: column;
+        align-items: stretch;
+        text-align: center;
+    }
+}
 
 
 .pokemon {
@@ -66,14 +81,14 @@ body {
 
 .pokemon img {
     width: 95%;
-    
+
 }
 
 .pokeImg {
     background-color: rgb(234, 233, 233);
     border-radius: 50%;
     box-shadow: 0 1px 6px 0 rgb(0, 0, 0);
-    
+
 }
 
 .upon {
@@ -98,14 +113,14 @@ input[type="text"] {
     padding: 10px;
     margin-right: 10px;
     border: 2px solid #c52424;
-    border-radius: 4px;
+    border-radius: 8px;
     border-color: #000000;
 }
 
 button {
     padding: 10px;
-    background-color: #003A70;
-    color: #FFCB05;
+    background-color: #ff3c07;
+    color: #ffffff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -113,8 +128,8 @@ button {
 }
 
 button:hover {
-    background-color: #123f63;
-    color: #FFCB05;
+    background-color: #ff3c07;
+    color: #873e0d;
     transform: scale(1.01);
 
 }
@@ -130,9 +145,7 @@ button:hover {
 }
 
 .modal-content {
-    background: linear-gradient(to right, #123f63, #4c4622ef);
-
-    color: #000000;
+    background-color: #cbffc2;
     max-width: 900px;
     margin: 20px auto;
     padding: 20px;
@@ -142,7 +155,7 @@ button:hover {
     justify-content: space-between;
     overflow-y: auto;
     max-height: 500px;
-    scrollbar-color: #123f63 #ffffff;
+    scrollbar-color: #232323 #ffffff;
     scrollbar-width: thin;
 
 
@@ -172,7 +185,7 @@ button:hover {
     padding: 0;
     border-radius: 8px;
     margin-top: 20px;
-    background-color: #123f63;
+    background-color: #fc3516;
     filter: drop-shadow(0 0 0.2rem #777777);
     margin: 15px;
     padding: 15px;
@@ -189,10 +202,7 @@ button:hover {
     font-size: 20px;
     font-weight: bold;
     border-radius: 10px;
-
-
 }
-
 
 
 .eee img {
@@ -254,8 +264,30 @@ button:hover {
     margin-bottom: 20px;
     padding: 20px;
     color: #FFCB05;
-    background-color: #0a4678;
-    border-radius: 10px;;
+    background-color: #fc3516;
+    filter: drop-shadow(0 0 0.2rem #777777);
+    border-radius: 10px;
+    ;
+}
+
+@media only screen and (max-width: 768px) {
+
+    .moves-list,
+    .evolution-list,
+    .abilities-list,
+    .type-advantages-list {
+        width: calc(50% - 20px);
+    }
+}
+
+@media only screen and (max-width: 480px) {
+
+    .moves-list,
+    .evolution-list,
+    .abilities-list,
+    .type-advantages-list {
+        width: 100%;
+    }
 }
 
 .moves-list h3,
@@ -280,8 +312,9 @@ strong {
     display: block;
 
 }
+
 .evolution-list ul {
-   
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -293,14 +326,16 @@ strong {
 
 
 }
- .moves-list ul {
-    list-style:circle
-  
+
+.moves-list ul {
+    list-style: circle
 }
+
 .abilities-list ul {
-   list-style: square;
-   text-align: center;
+    list-style: square;
+    text-align: center;
 }
+
 .type-advantages-list ul {
     display: flex;
     justify-content: space-between;
@@ -311,9 +346,9 @@ strong {
     gap: 10px;
     margin-top: 15px;
 }
+
 .evolution-list li {
     font-size: 16px;
     text-align: center;
-    
-}
 
+}
