--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
 
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', sans-serif;
-    font-size: 80px;
+    font-size: 110px;
     font-weight: bold;
     margin-top: 35px;
     margin-bottom: 50px;
-    color: #fc3516;
-    -webkit-text-stroke: 4px #873e0d;
+    color: #ff9b05;
+    -webkit-text-stroke: 5px #011558;
     padding: 10px;
     display: inline-block;
     cursor: pointer;
@@ -27,7 +27,7 @@ h1:hover {
 }
 
 body {
-    background-color: #ffffff;
+    background-color: #5b8bfc;
     color: #000000;
     display: flex;
     font-weight: bold;
@@ -119,7 +119,7 @@ input[type="text"] {
 
 button {
     padding: 10px;
-    background-color: #ff3c07;
+    background-color: #0e55f9;
     color: #ffffff;
     border: none;
     border-radius: 5px;
@@ -128,8 +128,9 @@ button {
 }
 
 button:hover {
-    background-color: #ff3c07;
-    color: #873e0d;
+    
+    background-color: #0f0bd7;
+    color: #ffffff;
     transform: scale(1.01);
 
 }
@@ -145,7 +146,7 @@ button:hover {
 }
 
 .modal-content {
-    background-color: #cbffc2;
+    background-color: #1b42a4;
     max-width: 900px;
     margin: 20px auto;
     padding: 20px;
@@ -185,7 +186,7 @@ button:hover {
     padding: 0;
     border-radius: 8px;
     margin-top: 20px;
-    background-color: #fc3516;
+    background-color: #183e98;
     filter: drop-shadow(0 0 0.2rem #777777);
     margin: 15px;
     padding: 15px;
@@ -264,7 +265,7 @@ button:hover {
     margin-bottom: 20px;
     padding: 20px;
     color: #FFCB05;
-    background-color: #fc3516;
+    background-color: #183e98;
     filter: drop-shadow(0 0 0.2rem #777777);
     border-radius: 10px;
     ;
