--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ body {
     justify-content: space-between;
     margin: 0 auto;
     max-width: 1200px;
-
 }
 
 @media only screen and (max-width: 768px) {
@@ -72,6 +71,7 @@ body {
     margin-bottom: 35px;
     cursor: pointer;
     transition: 0.3s;
+    
 }
 
 .pokemon:hover {
@@ -80,9 +80,11 @@ body {
 }
 
 .pokemon img {
-    width: 95%;
-
+    width: 100%;
+    max-width: 100%;
+    height: auto;
 }
+
 
 .pokeImg {
     background-color: rgb(234, 233, 233);
@@ -143,6 +145,7 @@ button:hover {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
 }
 
 .modal-content {
@@ -158,7 +161,10 @@ button:hover {
     max-height: 500px;
     scrollbar-color: #232323 #ffffff;
     scrollbar-width: thin;
-
+    position: relative;
+    z-index: 2;
+    overflow: auto;
+    max-height: 70vh;
 
 }
 
@@ -207,13 +213,12 @@ button:hover {
 
 
 .eee img {
-
     width: 70%;
+    max-width: 100%;
     align-items: center;
     justify-content: center;
     filter: drop-shadow(0 0 0.3rem #000000);
 }
-
 .eee h2.pokeName {
 
     color: #000000;
@@ -354,3 +359,4 @@ strong {
     text-align: center;
 
 }
+
